# MolADT-Bayes-Python

./: .gitignore  LICENSE  Makefile  PORTING_NOTES.md  PORT_PROMPT.md  README.md  magic_mushrooms.md  pyproject.toml
docs/: README.md  cli.md  data-model.md  data-sources.md  examples.md  haskell_interop.md  inference-and-benchmarks.md  models.md  orbitals.md  outputs.md  parsing.md  quickstart.md  repo-map.md  representation.md  smiles-scope-and-validation.md
moladt/: __init__.py  cli.py  reaction.py
moladt/chem/: __init__.py  constants.py  coordinate.py  dietz.py  molecule.py  (+5 more)
molecules/: benzene.sdf  diborane.sdf  ferrocene.sdf  hydrogen.sdf  methane.sdf  morphine.sdf  oxygen.sdf  psilocybin.sdf
results/: README.md
scripts/: benchmark_zinc.py  common.py  download_data.py  features.py  geometry_runner.py  install_cmdstan.py  literature_baselines.py  model_errors.py  model_registry.py  predictive_metrics.py  process_freesolv.py  process_qm9.py  report_graphs.py  run_all.py  splits.py  stan_runner.py  tabular_runner.py  toolchain.py
stan/: bayes_gp_rbf_screened.stan  bayes_hierarchical_shrinkage.stan  bayes_linear_student_t.stan
tests/: test_benchmark_pipeline.py  test_cli.py  test_data_transfer_progress.py  test_edge_properties.py  test_examples.py  test_logp_stan.py  test_makefile_setup.py  test_molecule_iteration.py  test_mutable_molecule.py  test_optional_model_paths.py  test_parser_roundtrip.py  test_pretty_rendering.py  test_reporting_artifacts.py  test_toolchain.py  test_validation_properties.py  test_workspace_makefile.py  test_workspace_showcase.py
(+18 files in other folders)
