[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "moladt"
version = "0.1.0"
description = "Faithful Python port of the MolADT Bayesian chemistry ADT"
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
authors = [
  {name = "Oliver Goldstein"},
]
classifiers = [
  "License :: OSI Approved :: MIT License",
]
dependencies = [
  "cmdstanpy>=1.3,<2",
  "numpy>=2.0",
  "pandas>=2.0",
  "psutil>=7.0",
  "rdkit>=2025.9",
  "requests>=2.32",
  "scikit-learn>=1.8",
  "scipy>=1.17",
]

[project.optional-dependencies]
ml = [
  "catboost>=1.2",
]
geom = [
  "torch>=2.4",
  "torch-geometric>=2.5",
]
dev = [
  "mypy>=1.10",
  "pytest>=8.0",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["moladt*"]

[tool.setuptools.package-data]
moladt = ["stan/*.stan"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
check_untyped_defs = true
strict_equality = true
